package abz;
option java_package = "protobuf.clazz.hes";
option java_outer_classname = "HesRsp";
import "basic/protocol.proto";

//补牌
message PlayerMoCard {
	optional int32 target = 1;
	optional int32 card_count = 2;
	repeated int32 card_data = 3;
	optional int32 target_hand_card_count = 4;
	optional Int32ArrayResponse target_hand_cards = 5;
}

message TableResponse_HES {
	optional int32 reason = 1;
	optional int32 banker_player = 2;
	repeated Int32ArrayResponse rest_card = 3;
	repeated WeaveItemResponseArrayResponse weaveItemArray=4;
	repeated int32 hu_card = 5;
	repeated int32 win_order = 13;
	repeated string weave_des = 6;
	repeated string orther_des = 7; 
	repeated int32 fan_shu = 8; 
	repeated float get_socre = 9; 
	
	repeated Int32ArrayResponse end_des = 10;
	repeated int32 all_end_des = 11;
	repeated float end_score = 12;
	optional string game_des = 18;
	
	optional string start_time = 14;
	optional string end_time = 15;
	optional RoomInfo room_info = 17; 
	
	optional int32 game_round = 20;
	optional int32 cur_round= 19;
	repeated RoomPlayerResponse players = 21;
}